Fixed href to stylesheet

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link href="style.css" rel="stylesheet">
+<link href="styles.css" rel="stylesheet">
 <!--Poppins 400 and 600 font; sans-serif-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<title>Flexbox Exercises</title>
 </head>    
 <body>
 
