Added a 4th div

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="one"></div>
     <div class="two"></div>
     <div class="three"></div>
+    <div class="four"></div>
   </div>
 
   </body>
