Nested sign up and login links under a new div

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <body>
     <div class='menu-container'>
       <div class='menu'>
-        <div class='date'>February 28, 2024</div>
-        <div class='signup'>Sign Up</div>
-        <div class='login'>Login</div>
+        <div class='date'>February 27, 2024</div>
+        <div class='links'>
+            <div class='signup'>Sign Up</div>
+            <div class='login'>Login</div>
       </div>
     </div>
   </body>
